--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,11 @@
 ---
 
 @import "{{ site.theme }}";
-
 body {
-  background-color: lightblue;
+  background-color: 010409;
+  color: blue;
+}
+
+h1 {
+  color: green;
 }
