--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,10 @@
 
 @import "{{ site.theme }}";
 body {
-  background-color: 010409;
-  color: blue;
+  background-color: #010409;
+  color: white;
 }
 
 h1 {
-  color: green;
+  color: #c9d1d9;
 }
