--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,14 @@
 
 @import "{{ site.theme }}";
 body {
-  background-color: #010409;
+  background-color: #0d1117;
   color: white;
 }
 
 h1 {
+  color: #c9d1d9;
+}
+
+h4 {
   color: #c9d1d9;
 }
