--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
 
       </section>
       <footer>
+        <p><img src="https://www.linkedin.com/feed/?doFeedRefresh=true&nis=true&lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3Br%2FEM0W8ATKqox47SHwOR%2BA%3D%3D" /><a href="https://www.linkedin.com/in/teghwinsingh/"></a></p>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
