--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,9 @@
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
-
+        
+        <h2>McGill University - Business Analytics and Marketing</h2>
+        
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <!--{% if site.github.is_project_page %}
@@ -45,7 +47,7 @@
 
       </section>
       <footer>
-        <p>LinkedIn<a href="https://www.linkedin.com/in/teghwinsingh/"></a></p>
+        <p><a href="https://www.linkedin.com/in/teghwinsingh/">LinkedIn</a></p>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
