--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
-        <h3>McGill University</h3>
-        <h4>Business Analytics and Marketing</h4>
+        <h4>McGill University <br> Business Analytics and Marketing</h4>
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
