--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,6 +4,6 @@
 {% include head-custom-google-analytics.html %}
 
 <!-- You can set your favicon here -->
-<link rel="shortcut icon" type="image/png" href="images/favicon.png">
+<link rel="shortcut icon" type="image/png" href="images/favicon-16x16.png">
 
 <!-- end custom head snippets -->
