--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,6 +3,12 @@
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
+<meta property=“og:image” content= “images/social_image.jpg"/>
+
+<meta property=”og:image:width” content=”180″ />
+
+<meta property=”og:image:height” content=”110″ />
+
 <!-- You can set your favicon here -->
 <link rel="shortcut icon" type="image/png" href="./images/favicon-16x16.png?">
 
