--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,7 +3,7 @@
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
-<meta property=“og:image” content= “images/social_image.jpg"/>
+<meta property=“og:image” content= “https://github.com/teghwin404/portfolio/blob/main/images/social_image.jpg">
 
 <meta property=”og:image:width” content=”1280″ />
 
