--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
-<meta property="og:image" content= "https://github.com/teghwin404/portfolio/blob/main/images/social_image.jpg">
+<meta property="og:image" content= "/images/social_image.jpg">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1280" />
 <meta property="og:image:height" content="640" />
