--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         {% endif %}
         
         <h4>McGill University <br> Business Analytics and Marketing</h4>
-        <h5>Actively looking for full-time opportunities in Data Analytics</h5>
+        <h5>Actively looking for full-time opportunities in Data Analytics based in Toronto or Montreal</h5>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <!--{% if site.github.is_project_page %}
